feat: add security hardening, responsive UI, backend quality, and test improvements
Phase 1 - Security: BCrypt password hashing with configurable credentials,
custom exception hierarchy (404/400), Jakarta validation on all DTOs,
role-based authorization (DEVELOPER for writes), tightened CORS.

Phase 2 - UI/UX: Angola Material theme (red/gold palettes, Source Sans 3),
responsive mat-sidenav layout with mobile hamburger menu, breakpoints for
all pages (dashboard, stakeholder, sprints, calendar, tasks, reports),
loading state buttons on task actions.

Phase 3 - Backend quality: SLF4J logging on services, ProjectConfigService
with cached config replacing hardcoded values, OpenAPI annotations on all
8 controllers (33 endpoints), composite index on tasks(sprint_id, status).

Phase 4 - Testing: Enhanced frontend component tests, controller validation
and error tests, integration tests (task workflow, dashboard), JaCoCo and
Jest coverage configuration. 752 backend + 254 frontend = 1006 tests passing.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>